--- a/Business/src/App.scss
+++ b/Business/src/App.scss
@@ -1,3 +1,7 @@
-.dbp{
-    color: blue;
-}
+//utilities
+@import './stylesheets/utilities/utilities';
+//Components
+@import './stylesheets/components/navbar';
+
+//typography
+@import './stylesheets/typography/typography';
