landing page framework complete

--- a/Business/src/stylesheets/typography/_typography.scss
+++ b/Business/src/stylesheets/typography/_typography.scss
@@ -3,8 +3,13 @@ $small-heading-text-size: 1rem;
 
 //padding for device size
 $padding-none: 0px;
-$padding-top-large: 0.8rem;
-$padding-left-large: 1rem;
+$padding-extra-small: 0.8rem;
+$padding-extra-small: 1rem;
+$padding-small: 2.5rem;
+$padding-large: 5rem;
 
 //margins
 $margin-none: none;
+$margin-extra-small: 1rem;
+$margin-small: 2.5rem;
+$margin-large: 5rem;
