--- a/Business/src/stylesheets/components/_navbar.scss
+++ b/Business/src/stylesheets/components/_navbar.scss
@@ -11,7 +11,7 @@
         padding: $padding-none;
 
         .bp-C-Navbar_list_items{
-            padding: $padding-top-large $padding-left-large;
+            padding: $padding-extra-small $padding-extra-small;
             font-family: $font-family;
             font-size: $small-heading-text-size;
 
