changed to variables

--- a/Business/src/stylesheets/components/_landing.scss
+++ b/Business/src/stylesheets/components/_landing.scss
@@ -1,6 +1,6 @@
 .dp-C-Landing_container{
     height: 50%;
-    width: max-width;
+    width: 100%;
     margin: $margin-large $margin-small;
 
     .dp-C-Landing_imgContainer{
