--- a/Business/src/stylesheets/components/_navbar.scss
+++ b/Business/src/stylesheets/components/_navbar.scss
@@ -3,7 +3,7 @@
 
 .bp-C-Navbar_container{
     height: 4rem;
-    margin: $margin-none;
+    margin: $margin-extra-small;
 
     .bp-C-Navbar_list{
         list-style: none;
