finished footer frame

--- a/Business/src/App.scss
+++ b/Business/src/App.scss
@@ -6,4 +6,5 @@
 //Components
 @import './stylesheets/components/navbar';
 @import './stylesheets/components/landing';
+@import './stylesheets/components/footer';
 
