--- a/Business/src/stylesheets/components/_navbar.scss
+++ b/Business/src/stylesheets/components/_navbar.scss
@@ -2,8 +2,8 @@
 @import '../typography/typography.scss';
 
 .bp-C-Navbar_container{
-    height: 4rem;
-    margin: $margin-extra-small;
+    height: 20%;
+    margin: $margin-small $margin-small;
 
     .bp-C-Navbar_list{
         list-style: none;
