--- a/Business/src/stylesheets/typography/_typography.scss
+++ b/Business/src/stylesheets/typography/_typography.scss
@@ -6,10 +6,12 @@ $padding-none: 0px;
 $padding-extra-small: 0.8rem;
 $padding-extra-small: 1rem;
 $padding-small: 2.5rem;
-$padding-large: 5rem;
+$padding-medium: 5rem;
+$padding-large: 8rem;
 
 //margins
 $margin-none: none;
 $margin-extra-small: 1rem;
 $margin-small: 2.5rem;
-$margin-large: 5rem;
+$margin-medium: 5rem;
+$margin-large: 8rem;
