--- a/Business/src/stylesheets/utilities/_utilities.scss
+++ b/Business/src/stylesheets/utilities/_utilities.scss
@@ -26,6 +26,11 @@
     width: 33%;
 }
 
+.bp-U-flexbox_one-forth{
+    display: inline-block;
+    width: 25%;
+}
+
 .bp-U-flexbox_two-thirds{
     display: inline-block;
     width: 67%;
