remove nav at breakpoint

--- a/Business/src/stylesheets/components/_navbar.scss
+++ b/Business/src/stylesheets/components/_navbar.scss
@@ -25,4 +25,10 @@
             }
         }
     }
+    @media screen and (max-width: $max-breakpoint-large) {
+        .bp-C-Navbar_list{
+            display: none;
+        }
+    }
+
 }
