--- a/Business/src/stylesheets/typography/_typography.scss
+++ b/Business/src/stylesheets/typography/_typography.scss
@@ -15,3 +15,14 @@ $margin-extra-small: 1rem;
 $margin-small: 2.5rem;
 $margin-medium: 5rem;
 $margin-large: 8rem;
+
+//breakpoints
+$max-breakpoint-small: 600px;
+$max-breakpoint-medium: 700px;
+$max-breakpoint-large: 800px;
+$max-breakpoint-extra-large: 1000px;
+
+$min-breakpoint-small: 600px;
+$min-breakpoint-medium: 700px;
+$min-breakpoint-large: 800px;
+$min-breakpoint-extra-large: 1000px;
