--- a/Business/src/stylesheets/utilities/_utilities.scss
+++ b/Business/src/stylesheets/utilities/_utilities.scss
@@ -1,7 +1,9 @@
 .bp-U-align-content-center{
     align-content: center;
 }
-
+.bp-U-display-none{
+    display: none;
+}
 .bp-U-display-inline-block{
     display: inline-block;
 }
