--- a/Business/src/stylesheets/utilities/_utilities.scss
+++ b/Business/src/stylesheets/utilities/_utilities.scss
@@ -8,6 +8,10 @@
     display: inline-block;
 }
 
+.bp-U-display-block{
+    display: block;
+}
+
 .bp-U-text-align-center{
     text-align: center;
 }
