landing page responsive / looks good on all devices

--- a/Business/src/stylesheets/components/_footer.scss
+++ b/Business/src/stylesheets/components/_footer.scss
@@ -1,6 +1,8 @@
 .bp-C-Footer_container{
     width: 80%;
-    padding: $padding-small $padding-none;   
+    padding: $padding-small $padding-none;
+    margin: $margin-extra-small $margin-none; 
+    display: block;  
 
     a{
         display: inline-block;
