--- a/Business/src/stylesheets/typography/_typography.scss
+++ b/Business/src/stylesheets/typography/_typography.scss
@@ -1,4 +1,4 @@
-$font-family: Verdana, Geneva, Tahoma, sans-serif;
+$font-family: 'Oswald', sans-serif;
 $small-heading-text-size: 1rem;
 
 //padding for device size
